# simple_tcp_server

./: README.md  pyproject.toml
simple_tcp_server/: Utils.py  __init__.py  stc.py  sts.py
